name:                batchd-docker
version:             0.1.0.0
synopsis:            docker containers host controller for batchd
-- description:
homepage:            https://github.com/portnov/batchd/
license:             BSD3
license-file:        LICENSE
author:              Ilya Portnov
maintainer:          portnov84@rambler.ru
copyright:           2017 Ilya Portnov
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Batchd.Docker
  build-depends:       base >= 4.7 && < 5,
                       mtl >= 2.2,
                       exceptions >= 0.8.3,
                       text >= 1.2.2.2,
                       aeson >= 1.1.2.0,
                       batchd >= 0.1.0.0,
                       docker >= 0.4.1.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/portnov/batchd/
