name:                batchd-libvirt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/batchd-libvirt#readme
license:             BSD3
license-file:        LICENSE
author:              ILyaPortnov
maintainer:          portnov84@rambler.ru
copyright:           2017 Ilya Portnov
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Batchd.Ext.LibVirt
  build-depends:       base >= 4.7 && < 5,
                       time >= 1.6,
                       text >= 1.2.2.2,
                       aeson >= 1.1.2.0,
                       batchd-core >= 0.1.0.0,
                       libvirt-hs >= 0.2.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/batchd-libvirt
