name:                batchd-linode
version:             0.1.0.0
synopsis:            batchd host controller for Linode.com hosts
-- description:
homepage:            https://github.com/portnov/batchd#readme
license:             BSD3
license-file:        LICENSE
author:              IlyaPortnov
maintainer:          portnov84@rambler.ru
copyright:           2017 Ilya Portnov
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Batchd.Ext.Linode
  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.4,
                       mtl >= 2.2.1,
                       text >= 1.2.2.2,
                       lens >= 4.15.4,
                       aeson >= 1.1.2.0,
                       batchd-core >= 0.1.0.0,
                       text-format-heavy >= 0.1.5.0,
                       heavy-logger >= 0.3.1.0,
                       linode-openapi >= 0.1.0.0,
                       http-client >= 0.6.4,
                       time >= 1.9
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/portnov/batchd
